Fix too large game grid in portrait mode

--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ body.opposite {
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     border: 1px solid black;
     flex: 0 0 auto;
+    margin: auto;
 }
 
 .snake {
